search page autocomplete works

--- a/site/map.html
+++ b/site/map.html
@@ -77,7 +77,20 @@ title: Overview Map
 				<span class="leaflet-sidebar-close"><i class="fa fa-caret-left"></i></span>
 			</h1>
 
+			<p> Searches are inclusive of all selected options</p>
 
+			<div class="control-group">
+				<label for="select-id">Search Temples by ID or Name:</label>
+				<select id="select-id"></select>
+			</div>
+			<div class="control-group">
+				<label for="select-chinese">Search Temples by Chinese Name</label>
+				<select id="select-chinese"></select>
+			</div>
+			<div class="control-group">
+				<label for="select-address">Search Temples by Address:</label>
+				<select id="select-address"></select>
+			</div>
 		</div>
 	</div>
 
