--- a/index.html
+++ b/index.html
@@ -109,6 +109,7 @@
 								<li><b>Latlng: </b><span id="latlng"></span></li>
 							</div>
 						</ul>
+						<div class="row pt-3" id="gallery"></div>
 					</div>
 				</div>
 
