completed script to process altar spreadhseet

--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 					<h2>Chinese Religious Places in Singkawang, West Kalimantan</h2>
 					<p> This is a digital database and interactive map of all of the Chinese religious places in the city of Singkawang, West Kalimantan, in Indonesian Borneo. The information, photographs, site maps, historical documents, and temple reports have been created by Dr. Emily Zoe Hertzman and assistant researcher Edhylius Sean. </p>
 
-					<p>Singkawang is a city of roughly 220,000, and is the only city in Indonesia with a majority Chinese Indonesian population. It is located on the coast of West Kalimantan between the provincial capital Pontianak to the south and smaller cities and towns to north, such as Sambas and Pemangkat. The inhabitants of Singkawang are predominantly speakers of the Hakka dialect. San Kheu Jong, as the city is called in Hakka, is known across Indonesia as the “city of a thousand temples” in recognition of the density of Chinese religious places. With a metropolitan administrative area of 504 km<sup>2</sup>, San Kheu Jong includes many villages and sub-urban neighbourhoods, which adds to the amount and diversity of religious places that are visible and striking across the urban and rural landscape. </p>
+					<p>Singkawang is a city of roughly 220,000, and is the only city in Indonesia with a majority Chinese Indonesian population. It is located on the coast of West Kalimantan between the provincial capital Pontianak to the south and smaller cities and towns to north, such as Sambas and Pemangkat. The inhabitants of Singkawang are predominantly speakers of the Hakka dialect. San Kheu Jong, as the city is called in Hakka, is known across Indonesia as the “city of a thousand temples” in recognition of the density of Chinese religious places. With a metropolitan administrative area of 504 km<sup>2</sup>, San Kheu Jong includes many villages and sub-urban roads, which adds to the amount and diversity of religious places that are visible and striking across the urban and rural landscape. </p>
 
 					<p>The city has a high level of religiosity with multiple ethnic and religious traditions holding numerous annual events and rituals, the largest of which is Cap Go Meh. This database tries to represent the centrality of these religious sites in the everyday life of members of Chinese Indonesian community by mapping and visually representing them, their spatial relationships, density and diversity. The Chinese religious places in Singkawang that are part of this comprehensive map and database include temples that range from being over 150 years old to temples that are currently under construction. We include Buddhist temples of all the major Buddhist sects, as well as temples that are oriented towards Daoism, Confucianism, the Three Teachings (Indo. Tri Dharma; Hak. Sam Kau) or other places that can be considered sites of Chinese Folk Religion. We also include the house altars of Chinese spirit-mediums and expert healers, for which the city is well known, with the number of resident spirit-mediums in the hundreds. </p>
 
@@ -97,7 +97,7 @@
 								<li><b>Name (in Pinyin): </b> <span id="pinyin"></span></li>
 							</div>
 							<div class="row pt-2">
-								<li><b>Neighbourhood:</b> <span id="neighbourhood"></span></li>
+								<li><b>road:</b> <span id="road"></span></li>
 							</div>
 							<div class="row pt-2">
 								<li><b>District:</b> <span id="region"></span></li>
@@ -152,4 +152,6 @@
 
 
 	<script src="./js/main.js"></script>
-</body></html>
+</body>
+
+</html>
